--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="img/logo.svg" alt="logo booleaneer">
+        </div>
+    </header>
 </body>
 </html>
