--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="img/logo.svg" alt="logo booleaneer">
-        </div>
+    <!--header-->
+    <header class="bg-image">
+        <img src="img/logo.svg" alt="logo booleaneer" class="booleaneer-logo">
     </header>
+    <!--main content-->
 </body>
 </html>
