added images and first article

--- a/index.html
+++ b/index.html
@@ -12,5 +12,20 @@
         <img src="img/logo.svg" alt="logo booleaneer" class="booleaneer-logo">
     </header>
     <!--main content-->
+    <main>
+        <h1>
+            Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
+        </h1>
+        <p class="grey-text"><strong>Scritto da <span class="skyblue-text">The Booleaneer</span></strong></p>
+        <p class="grey-text">Il 10/10/2020</p>
+        <img src="/img/tim-1.jpg" alt="foto Tim Berners-Lee">
+        <img src="/img/tim-2.jpg" alt="foto Tim Berners-Lee">
+        <p>1st Photo:John S. and James L. Knight Founfation, by Scott Henricsen</p>
+        <p>2ns Photo: Wikimedia, by Paul Clarke</p>
+    <!--first article-->
+        <article>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span class="bg-yellow">eos unde rerum dolorum amet illo architecto nam animi tenetur quos provident earum cupiditate minima ducimus eius fuga inventore nemo.</span> Praesentium iusto tempore magnam sed reprehenderit et porro, neque corporis quo aut facilis adipisci iure eveniet a numquam commodi eum animi dolorum ratione quidem ullam! Veniam culpa ipsa, libero maiores labore, alias nisi doloribus sit ut harum unde!
+        </article>
+    </main>
 </body>
 </html>
