--- a/index.html
+++ b/index.html
@@ -27,11 +27,34 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span class="bg-yellow">eos unde rerum dolorum amet illo architecto nam animi tenetur quos provident earum cupiditate minima ducimus eius fuga inventore nemo.</span> Praesentium iusto tempore magnam sed reprehenderit et porro, neque corporis quo aut facilis adipisci iure eveniet a numquam commodi eum animi dolorum ratione quidem ullam! Veniam culpa ipsa, libero maiores labore, alias nisi doloribus sit ut harum unde!
         </article>
     <!--list-->
-    <ul>
-        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum illo officia numquam nostrum atque enim, maxime facere blanditiis! Voluptate quis ullam repellat velit deleniti ab non corrupti, voluptates aut earum.</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt obcaecati consequatur perferendis, neque quas ipsam cupiditate nemo enim non laborum? Et cupiditate ullam facere cum asperiores numquam doloremque incidunt sequi?</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad neque necessitatibus facere porro impedit fuga repudiandae numquam! Saepe ab tenetur placeat nesciunt, eaque quam repudiandae dicta eveniet laudantium autem ea?</li>
-    </ul>
+        <ul>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum illo officia numquam nostrum atque enim, maxime facere blanditiis! Voluptate quis ullam repellat velit deleniti ab non corrupti, voluptates aut earum.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt obcaecati consequatur perferendis, neque quas ipsam cupiditate nemo enim non laborum? Et cupiditate ullam facere cum asperiores numquam doloremque incidunt sequi?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad neque necessitatibus facere porro impedit fuga repudiandae numquam! Saepe ab tenetur placeat nesciunt, eaque quam repudiandae dicta eveniet laudantium autem ea?</li>
+        </ul>
+    <!--table-->
+        <table>
+            <tr class="tablehead">
+                <th>Lorem, ipsum dolor</th>
+                <th>Lorem, ipsum dolor</th>
+                <th>Lorem, ipsum dolor</th>
+            </tr>
+            <tr class="skybg">                                
+                <td>Lorem, ipsum dolor</td>
+                <td>Lorem, ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe aspernatur sit et corporis esse. Ut eos nihil cupiditate, molestiae ex unde autem cumque sequi voluptates totam dolores, quae aspernatur at.</td>
+            </tr>
+            <tr>
+                <td>Lorem, ipsum dolor</td>
+                <td>Lorem, ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam possimus id beatae in maxime esse officiis doloribus fugiat repellat sit ab facere deserunt, ipsa nihil, suscipit voluptatibus optio, recusandae quisquam?</td>
+            </tr>
+            <tr class="skybg">
+                <td>Lorem, ipsum dolor</td>
+                <td>Lorem, ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam possimus id beatae in maxime esse officiis doloribus fugiat repellat sit ab facere deserunt, ipsa nihil, suscipit voluptatibus optio, recusandae quisquam?</td>
+            </tr>
+        </table>
     </main>
 </body>
 </html>
