added second article

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam possimus id beatae in maxime esse officiis doloribus fugiat repellat sit ab facere deserunt, ipsa nihil, suscipit voluptatibus optio, recusandae quisquam?</td>
             </tr>
         </table>
+    <!--second article-->
+    <article>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span class="bg-yellow">Dolorem aliquam optio iure? Sunt itaque ipsum eligendi omnis hic non!</span> Explicabo, dolor nulla? Debitis, nisi quasi!
+    </article>
     </main>
 </body>
 </html>
