--- a/index.html
+++ b/index.html
@@ -60,5 +60,11 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span class="bg-yellow">Dolorem aliquam optio iure? Sunt itaque ipsum eligendi omnis hic non!</span> Explicabo, dolor nulla? Debitis, nisi quasi!
     </article>
     </main>
+    <footer>
+        <!--correlati-->
+        <p class="grey-text">Potrebbe Interessarti</p>
+        <p class="related-img-monitor"> <strong>Lorem, ipsum dolor.</strong></p>
+        <p class="related-img-graph"><strong>Lorem, ipsum dolor.</strong></p>
+    </footer>
 </body>
 </html>
